--- a/mandelbulber2/qt/custom_formula_editor.ui
+++ b/mandelbulber2/qt/custom_formula_editor.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Form</class>
- <widget class="QWidget" name="Form">
+ <class>cCustomFormulaEditor</class>
+ <widget class="QWidget" name="cCustomFormulaEditor">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -69,7 +69,7 @@
      <property name="title">
       <string>Main parameters</string>
      </property>
-     <layout class="QVBoxLayout" name="verticalLayout_2" stretch="">
+     <layout class="QVBoxLayout" name="verticalLayout_2">
       <property name="spacing">
        <number>2</number>
       </property>
